--- a/templates/catalog/wishlist/index.html.twig
+++ b/templates/catalog/wishlist/index.html.twig
@@ -10,7 +10,7 @@
 {% block catalog_body %}
   {# ai:page=wishlist map=@page_wishlist_map.mdc v=1 #}
   <div class="bg-white">
-    <div class="container mx-auto px-4 py-8">
+    <div class="container mx-auto py-8">
       <h1 class="text-2xl font-bold text-gray-900 mb-6">Моё избранное</h1>
 
       <div data-module="wishlist-counter">
