--- a/templates/catalog/cart/index.html.twig
+++ b/templates/catalog/cart/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block catalog_body %}
 {# ai:page=cart map=@page_cart_map.mdc v=1 #}
-<div class="container mx-auto px-4 py-6 relative">
+<div class="container mx-auto py-6 relative">
   <!-- Spinner для всей корзины -->
   {% include '@App/catalog/components/spinner.html.twig' with {
     id: 'cart-spinner',
