Обновлены стили и шаблоны для улучшения отображения заказов в личном кабинете. Реализованы макросы для упрощения кода и улучшения структуры, добавлены новые функции для отображения деталей доставки и кнопки отмены заказа. Обновлена конфигурация Tailwind для поддержки темной и светлой темы.

--- a/assets/catalog/styles.css
+++ b/assets/catalog/styles.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@plugin "flyonui";
+@plugin "flyonui" {
+  themes: light --default, dark --prefersdark, light;
+}
 
 @import "flyonui/themes.css";
 @import "flyonui/variants.css";
